{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 128,
  "lineage": "cab28d56-2038-907d-2960-44f684fbbda6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-863b58d1ada5d722c",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-863b58d1ada5d722c",
            "association_id": "eipassoc-ad8e8a97a3d4cb8e2",
            "domain": "vpc",
            "id": "eipalloc-863b58d1ada5d722c",
            "network_interface": "eni-bace6ba0bc92d732c",
            "private_dns": "ip-10-206-250-223.ec2.internal",
            "private_ip": "10.206.250.223",
            "public_dns": "ec2-127-176-239-97.compute-1.amazonaws.com",
            "public_ip": "127.176.239.97",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat",
              "environment": "local",
              "service": "localstack"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "billing_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-ekslinux",
            "arn": "arn:aws:ec2:us-east-1::instance/i-d81486bb5aab3c04d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-d81486bb5aab3c04d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r6a.2xlarge",
            "ipv6_address_count": 0,
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-fd8823d6a7aeb78e5",
            "private_dns": "ip-10-57-132-249.ec2.internal",
            "private_ip": "10.57.132.249",
            "public_dns": "ec2-54-214-223-213.localhost.localstack.cloud",
            "public_ip": "54.214.223.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "environment": "local",
                  "service": "localstack"
                },
                "tags_all": {
                  "environment": "local",
                  "service": "localstack"
                },
                "throughput": 0,
                "volume_id": "vol-3bb21a5ae97793d5b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1c8a14d7f4c1d91c4",
            "tags": {
              "Name": "Material Bank EC2 instance",
              "service": "billing"
            },
            "tags_all": {
              "Name": "Material Bank EC2 instance",
              "environment": "local",
              "service": "billing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lead_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-ekslinux",
            "arn": "arn:aws:ec2:us-east-1::instance/i-65090c870dbfcb3a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-65090c870dbfcb3a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r6a.2xlarge",
            "ipv6_address_count": 0,
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ad942d6c53342be8",
            "private_dns": "ip-10-210-52-239.ec2.internal",
            "private_ip": "10.210.52.239",
            "public_dns": "ec2-54-214-120-10.localhost.localstack.cloud",
            "public_ip": "54.214.120.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "environment": "local",
                  "service": "localstack"
                },
                "tags_all": {
                  "environment": "local",
                  "service": "localstack"
                },
                "throughput": 0,
                "volume_id": "vol-6301186ef13422a72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1c8a14d7f4c1d91c4",
            "tags": {
              "Name": "Material Bank EC2 instance",
              "service": "leads"
            },
            "tags_all": {
              "Name": "Material Bank EC2 instance",
              "environment": "local",
              "service": "leads"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-0e11002f0a11c16d4",
            "id": "igw-0e11002f0a11c16d4",
            "owner_id": "000000000000",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw",
              "environment": "local",
              "service": "localstack"
            },
            "vpc_id": "vpc-a7dd4d0ded7ae9333"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-863b58d1ada5d722c",
            "association_id": "eipassoc-ad8e8a97a3d4cb8e2",
            "connectivity_type": "public",
            "id": "nat-fea4e54e754b49daa",
            "network_interface_id": "eni-bace6ba0bc92d732c",
            "private_ip": "10.206.250.223",
            "public_ip": "127.176.239.97",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-7ab0b730337aeacb5",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat",
              "environment": "local",
              "service": "localstack"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-9e7a537617985c1391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-fea4e54e754b49daa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-9e7a537617985c139",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e11002f0a11c16d4",
            "id": "r-rtb-01dca71cebb86ef351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01dca71cebb86ef35",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-9e7a537617985c139",
            "id": "rtb-9e7a537617985c139",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-fea4e54e754b49daa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private",
              "environment": "local",
              "service": "localstack"
            },
            "timeouts": null,
            "vpc_id": "vpc-a7dd4d0ded7ae9333"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-01dca71cebb86ef35",
            "id": "rtb-01dca71cebb86ef35",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e11002f0a11c16d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public",
              "environment": "local",
              "service": "localstack"
            },
            "timeouts": null,
            "vpc_id": "vpc-a7dd4d0ded7ae9333"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-5295ce45d45c358e5",
            "route_table_id": "rtb-9e7a537617985c139",
            "subnet_id": "subnet-e2b32244704f26250"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-d6e05196e2a0e8526",
            "route_table_id": "rtb-9e7a537617985c139",
            "subnet_id": "subnet-76933e4bea738f97a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-us-east-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189d8aa608c33969",
            "route_table_id": "rtb-01dca71cebb86ef35",
            "subnet_id": "subnet-7ab0b730337aeacb5"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-bece8bb8c3739f96e",
            "route_table_id": "rtb-01dca71cebb86ef35",
            "subnet_id": "subnet-a39ed9ee3e0e5f300"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-e2b32244704f26250",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-e2b32244704f26250",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "environment": "local",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "service": "localstack"
            },
            "vpc_id": "vpc-a7dd4d0ded7ae9333"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-76933e4bea738f97a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-76933e4bea738f97a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "environment": "local",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "service": "localstack"
            },
            "vpc_id": "vpc-a7dd4d0ded7ae9333"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-7ab0b730337aeacb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-7ab0b730337aeacb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "environment": "local",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1",
              "service": "localstack"
            },
            "vpc_id": "vpc-a7dd4d0ded7ae9333"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-a39ed9ee3e0e5f300",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-a39ed9ee3e0e5f300",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "environment": "local",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1",
              "service": "localstack"
            },
            "vpc_id": "vpc-a7dd4d0ded7ae9333"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-a7dd4d0ded7ae9333",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-1a321724a5b4ce605",
            "default_route_table_id": "rtb-939ebe78c45cfd8a7",
            "default_security_group_id": "sg-73bc23959c0f2e61d",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-a7dd4d0ded7ae9333",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-939ebe78c45cfd8a7",
            "owner_id": "000000000000",
            "tags": {
              "Name": "billingvpc"
            },
            "tags_all": {
              "Name": "billingvpc",
              "environment": "local",
              "service": "localstack"
            }
          }
        }
      ]
    }
  ]
}